--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ include = [
 ]
 exclude = ["*.pyc", "*~", "*pycache*"]
 
+
+[tool.poetry.urls]
+"GitHub" = "https://github.com/johnpreston/kafka-connect-watcher"
+
 [tool.poetry.scripts]
 kafka_connect_watcher = "kafka_connect_watcher.cli:start_watcher"
 kafka-connect-watcher = "kafka_connect_watcher.cli:start_watcher"
@@ -25,7 +29,6 @@ importlib-resources = "^5.10"
 prometheus-client = "^0.16"
 aws-embedded-metrics = "^3.0.0"
 jinja2 = "^3.1.2"
-
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1"
@@ -56,3 +59,27 @@ exclude_lines = [
 omit = [
   "*/cli.py"
 ]
+
+[tool.tbump]
+github_url = "https://github.com/johnpreston/kafka-connect-watcher"
+
+[tool.tbump.version]
+current = "0.1.0"
+regex = '''
+  (?P<major>\d+)
+  \.
+  (?P<minor>\d+)
+  \.
+  (?P<patch>\d+)
+  (?:(?P<rc>[\S]+))?
+  '''
+
+[tool.tbump.git]
+message_template = "Bump to {new_version}"
+tag_template = "v{new_version}"
+
+[[tool.tbump.file]]
+src = "pyproject.toml"
+
+[[tool.tbump.file]]
+src = "kafka_connect_watcher/__init__.py"
