--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ jinja2 = "^3.1.2"
 black = "^23.1"
 isort = "^5.12"
 pre-commit = "^3.1"
+tbump = "^6.9.0"
+pyupgrade = "^3.3.1"
 
 
 [tool.poetry.group.docs.dependencies]
